--- a/Src/FlyPhotos/appsettings.json
+++ b/Src/FlyPhotos/appsettings.json
@@ -2,16 +2,35 @@
   "Settings": {
     "Theme": "Default",
     "WindowBackdrop": "Transparent",
-    "ResetPanZoomOnNextPhoto": true,
+    "DefaultMouseWheelBehavior": "Zoom",
+    "PanZoomBehaviourOnNavigation": "Reset",
     "CacheSizeOneSideHqImages": 2,
     "CacheSizeOneSidePreviews": 300,
     "ShowThumbnails": true,
+    "ThumbnailSelectionColor": "#ADFF2F",
     "AutoFade": true,
     "FadeIntensity": 60,
     "OpenExitZoom": false,
     "HighQualityInterpolation": true,
     "CheckeredBackground": false,
     "ImageFitPercentage": 100,
-    "TransparentBackgroundIntensity": 40
+    "TransparentBackgroundIntensity": 40,
+    "ThumbnailSize": 40,
+    "LastUsedMonitorId": 0,
+    "RememberLastMonitor": false,
+    "ScrollThreshold": 60,
+    "UseMouseFwdBackForStepZoom": false,
+    "ConfirmForDelete": true,
+    "ShowFileName": true,
+    "ShowCacheStatus": true,
+    "ShowImageDimensions": false,
+    "AutoHideMouse": false,
+    "UseExternalExeForContextMenu": false,
+    "ShowExternalAppShortcuts": false,
+    "ExternalApp1": "",
+    "ExternalApp2": "",
+    "ExternalApp3": "",
+    "ExternalApp4": "",
+    "ShowZoomPercent": true
   }
 }
