--- a/Src/FlyNativeLib/FlyNativeLib.vcxproj.filters
+++ b/Src/FlyNativeLib/FlyNativeLib.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="ShellContextMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ShellProgramScanner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ShellContextMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ShellProgramScanner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
