--- a/Src/FlyPhotos/FlyPhotos.csproj
+++ b/Src/FlyPhotos/FlyPhotos.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
+		<AssemblyVersion>2.5.16.0</AssemblyVersion>
 		<TargetFramework>net10.0-windows10.0.22621.0</TargetFramework>
 		<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
 		<RootNamespace>FlyPhotos</RootNamespace>
@@ -13,12 +14,13 @@
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 
 		<EnableMsixTooling>true</EnableMsixTooling>
-		<!-- WindowsPackageType>None</WindowsPackageType -->
+		<WindowsPackageType>None</WindowsPackageType>
 		
 		<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
 		<ApplicationIcon>Assets\app-icon.ico</ApplicationIcon>
 		<PublishAot>true</PublishAot>
-        <SatelliteResourceLanguages>en-US;ml-IN;de-DE</SatelliteResourceLanguages>
+		<DefaultLanguage>en-US</DefaultLanguage>
+		<SatelliteResourceLanguages>en-US;de-DE;fr-FR;es-ES;ja-JP;ko-KR;it-IT;pl-PL;nl-NL;sv-SE;fi-FI;ml-IN</SatelliteResourceLanguages>
 		<!-- InvariantGlobalization>true</InvariantGlobalization -->
 		<GenerateTestArtifacts>False</GenerateTestArtifacts>
 		<NoWarn>$(NoWarn);CA1416</NoWarn>
@@ -49,7 +51,8 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
 
-	<ItemGroup>		
+	<ItemGroup>
+		<PackageReference Include="Microsoft.DotNet.ILCompiler" Version="10.0.3" />
 		<PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.2.251219" />
 		<PackageReference Include="Magick.NET-Q16-HDRI-OpenMP-x64" Version="14.10.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.3" />
